[package]
name = "rseip"
version = "0.1.0"
edition = "2018"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Joylei/eip-rs"
repository = "https://github.com/Joylei/eip-rs.git"
#documentation = "https://docs.rs/crate/rseip/"
keywords = ["ethernet","codec", "industry", "eip", "cip"]
categories = ["asynchronous", "hardware-support"]
authors = ["joylei <leingliu@gmail.com>"]
resolver = "2"

[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["./core", "."]

[dependencies]
rseip-core={path = "./core", default-features = false}
bytes = "1"
byteorder="1"
log="0.4"
tokio = { version = "1", features = ["net", "macros", "io-util", "rt", "time"] }
tokio-util = { version = "0.6", features = ["codec", "net"] }
futures-util={version = "0.3", features = ["sink"]}
async-trait="0.1"
rand="0.8"
smallvec="1"

[dev-dependencies]
env_logger = "0.9"
futures = "0.3"
tokio={version = "1", features = ["full"]}
anyhow="1"

[features]
default=["inlinable-string", "error-explain"]
inlinable-string=["rseip-core/feat-inlinable-string"]
error-explain=[]

[build]
#rustc-wrapper = "sccache"

[profile.release]
lto = 'thin'
panic = 'abort'
codegen-units = 1

[profile.bench]
lto = 'thin'
codegen-units = 1

[profile.test]
debug = 1
