[package]
name = "rseip"
version = "0.3.0"
edition = "2021"
readme = "README.md"
description = "rseip - Ethernet/IP (CIP) client in pure Rust"
license = "MIT"
homepage = "https://github.com/Joylei/eip-rs"
repository = "https://github.com/Joylei/eip-rs.git"
documentation = "https://docs.rs/crate/rseip/"
keywords = ["ethernet", "codec", "industry", "eip", "cip"]
categories = ["asynchronous", "hardware-support"]
authors = ["joylei <leingliu@gmail.com>"]
resolver = "2"

[badges]
maintenance = { status = "passively-maintained" }

[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["./cip", "./core", "./eip", "."]

[dependencies]
rseip-core = { path = "./core", default-features = false, features = [
    "cip",
], version = "0.1" }
rseip-eip = { path = "./eip", default-features = false, version = "0.2" }
rseip-cip = { path = "./cip", default-features = false, version = "0.2" }
bytes = "1"
byteorder = "1"
log = "0.4"
tokio = { version = "1", features = ["net", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", features = ["sink"] }
async-trait = "0.1"
smallvec = "1"

[dev-dependencies]
env_logger = "0.9"
futures = "0.3"
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "time",
    "sync",
    "macros",
] }
anyhow = "1"
criterion = { version = "0.3", features = [
    "async_futures",
    "async_tokio",
    "cargo_bench_support",
] }

[features]
default = ["inlinable-string", "error-explain"]
inlinable-string = ["rseip-cip/inlinable-string", "rseip-eip/inlinable-string"]
error-explain = ["rseip-cip/error-explain", "rseip-eip/error-explain"]

[build]
#rustc-wrapper = "sccache"

[profile.release]
lto = 'thin'
panic = 'abort'
codegen-units = 1

[profile.bench]
lto = 'thin'
codegen-units = 1
debug = 1

[profile.test]
debug = 1

[[bench]]
name = "bench_read"
harness = false
