[package]
name = "rseip-cip"
version = "0.2.0"
edition = "2021"
description = "common industry protocol for rseip"
license = "MIT"
homepage = "https://github.com/Joylei/eip-rs"
repository = "https://github.com/Joylei/eip-rs.git"
documentation = "https://docs.rs/crate/rseip-cip/"
keywords = ["ethernet", "codec", "industry", "eip", "cip"]
categories = ["asynchronous", "hardware-support"]
authors = ["joylei <leingliu@gmail.com>"]
resolver = "2"

[dependencies]
rseip-core = { path = "../core", default-features = false, features = [
    "cip",
], version = "0.1" }
bytes = "1"
byteorder = "1"
log = "0.4"
tokio = { version = "1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
futures-util = { version = "0.3", features = ["sink"] }
async-trait = "0.1"
rand = "0.8"
smallvec = "1"

[features]
default = ["inlinable-string", "error-explain"]
inlinable-string = ["rseip-core/feat-inlinable-string"]
error-explain = []
