[package]
name = "rseip-core"
version = "0.1.0"
edition = "2018"
description = "reseip - core module"
license = "MIT"
homepage = "https://github.com/Joylei/eip-rs"
repository = "https://github.com/Joylei/eip-rs.git"
#documentation = "https://docs.rs/crate/rseip/"
keywords = ["ethernet", "codec", "industry", "eip", "cip"]
categories = ["asynchronous"]
authors = ["joylei <leingliu@gmail.com>"]
resolver = "2"

[dependencies]
inlinable_string={version = "^0.1.14", optional = true}
bytes={version = "1", optional = true}
byteorder={version = "1", optional = true}
smallvec="1"

[features]
default = ["feat-inlinable-string", "cip"]
feat-inlinable-string= ["inlinable_string"]
cip = ["bytes", "byteorder"]