[package]
name = "rseip-eip"
version = "0.1.0"
edition = "2018"
description = "reseip - encapsulation protocol"

[dependencies]
rseip-core={path = "../core", default-features = false, features =  ["cip"]}
bytes = "1"
byteorder="1"
log="0.4"
tokio = { version = "1", features = ["net", "macros", "io-util", "rt", "time"] }
tokio-util = { version = "0.6", features = ["codec", "net"] }
futures-util={version = "0.3", features = ["sink"]}
smallvec="1"

[features]
default = ["inlinable-string", "error-explain"]
inlinable-string = ["rseip-core/feat-inlinable-string"]
error-explain = []