[package]
name = "rseip-eip"
version = "0.2.0"
edition = "2021"
description = "encapsulation protocol for rseip"
license = "MIT"
homepage = "https://github.com/Joylei/eip-rs"
repository = "https://github.com/Joylei/eip-rs.git"
documentation = "https://docs.rs/crate/rseip-eip/"
keywords = ["ethernet", "codec", "industry", "eip", "cip"]
categories = ["asynchronous", "hardware-support"]
authors = ["joylei <leingliu@gmail.com>"]
resolver = "2"

[dependencies]
rseip-core = { path = "../core", default-features = false, features = [
    "cip",
], version = "0.1" }
bytes = "1"
byteorder = "1"
log = "0.4"
tokio = { version = "1", features = ["net", "macros", "io-util", "rt", "time"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
futures-util = { version = "0.3", features = ["sink"] }
smallvec = "1"

[features]
default = ["inlinable-string", "error-explain"]
inlinable-string = ["rseip-core/feat-inlinable-string"]
error-explain = []
